[gd_scene load_steps=11 format=3 uid="uid://28hdduw5fldk"]

[ext_resource type="Script" uid="uid://bidx567ska3mo" path="res://scripts/title_screen.gd" id="1_dc4i4"]
[ext_resource type="Texture2D" uid="uid://5ybyh8aj3nis" path="res://assets/screen/title-screen.jpg" id="1_fgkus"]
[ext_resource type="PackedScene" uid="uid://cid2xe8axy8qe" path="res://levels/world_01.tscn" id="2_e54dn"]
[ext_resource type="Texture2D" uid="uid://drqj10m7q7xxv" path="res://assets/screen/game_logo.png" id="2_s4lrb"]
[ext_resource type="Texture2D" uid="uid://d34e333813iu1" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="2_sa3yf"]
[ext_resource type="Theme" uid="uid://bwj5lp6dwis1l" path="res://themes/button_screen.tres" id="41_b4piy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mgrm8"]

[sub_resource type="Animation" id="Animation_3yumr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_e54dn"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.943603),
"transitions": PackedFloat32Array(2, 2.37841),
"update": 0,
"values": [Vector2(-450, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/mochi:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.603066, 0.945527),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3yumr"]
_data = {
&"RESET": SubResource("Animation_3yumr"),
&"reveal": SubResource("Animation_e54dn")
}

[node name="titleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dc4i4")
initial_scene = ExtResource("2_e54dn")

[node name="background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_fgkus")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_right = -450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("2_s4lrb")

[node name="btn_start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("41_b4piy")
theme_override_constants/outline_size = 12
text = "START"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_mgrm8")

[node name="btn_credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("41_b4piy")
theme_override_constants/outline_size = 12
text = "CREDITS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_mgrm8")

[node name="btn_quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("41_b4piy")
theme_override_constants/outline_size = 12
text = "QUIT"

[node name="mochi" type="TextureRect" parent="MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("2_sa3yf")
expand_mode = 2
flip_h = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3yumr")
}
autoplay = "reveal"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_credits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
